<resources>
    <string name="preference_user_key">com.miker.componentes.Usuario</string>
    <string name="preference_user_key_default">none</string>

    <string name="app_name">Login</string>
    <string name="title">Job aplication</string>
    <string name="subtitle">Por favor complete la información solicitada</string>
    <string name="eFullName">Full name:</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Correo Electronico</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="posicion">Puesto</string>
    <string name="eCurrentAddress">Current Address</string>
    <string name="streetAddress">Street Address</string>
    <string name="streetAddres_2">Street line 2</string>
    <string name="eCity">City</string>
    <string name="zipCode">Portal/Zip Code</string>
    <string name="emailAddress">Email Address</string>
    <string name="emailAddress_1">ex: name@email.com</string>
    <string name="phoneNumber">Phone number</string>
    <string name="areaCode">Area code</string>
    <string name="ePosition">Applying for Position</string>
    <string name="eDate">Start date</string>
    <string name="eUpload">Upload Resume</string>
    <string name="upload">Submit</string>
    <string name="phoneNumber_1">Phone Number</string>
    <string name="btn_send">Send</string>
    <string name="btn_file">File</string>
    <string name="title_activity_nav_drawer_usuario">NavDrawerActivityUsuario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bienvenido</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_nav_drawer_admin">NavDrawerActivityAdmin</string>
    <string name="user">User</string>
    <string name="password">Passwrod</string>
    <string name="personal_information">Personal Information</string>
    <string name="personal_information_password">Change Password</string>
    <string name="confirmation">Confirmation</string>
    <string name="user_information">User information</string>
</resources>
