<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:stretchColumns="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow android:layout_marginTop="@dimen/row_space"
                    android:layout_marginLeft="@dimen/row_space"
                    android:layout_marginRight="@dimen/row_space">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        app:srcCompat="@drawable/ic_account_circle_black_24dp" />


                </TableRow>

                <TableRow android:layout_marginTop="@dimen/row_space"
                    android:layout_marginLeft="@dimen/row_space"
                    android:layout_marginRight="@dimen/row_space">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:gravity="center"
                        android:text="@string/personal_information"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow android:layout_marginTop="@dimen/row_space"
                    android:layout_marginLeft="@dimen/row_space"
                    android:layout_marginRight="@dimen/row_space">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/first_name"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/first_name"
                        android:layout_width="267dp"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:gravity="fill"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColor="#000" />

                </TableRow>

                <TableRow android:layout_marginTop="@dimen/row_space"
                    android:layout_marginLeft="@dimen/row_space"
                    android:layout_marginRight="@dimen/row_space">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/last_name"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/last_name"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:background="#fff"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColor="#000" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/row_space"
                    android:layout_marginLeft="@dimen/row_space"
                    android:layout_marginRight="@dimen/row_space">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/emailAddress"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:background="#fff"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColor="#000" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/row_space"
                    android:layout_marginLeft="@dimen/row_space"
                    android:layout_marginRight="@dimen/row_space">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/eDate"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        tools:text="dd/mm/aaaa" />

                </TableRow>

                <TableRow android:layout_marginTop="@dimen/row_space"
                    android:layout_marginLeft="@dimen/row_space"
                    android:layout_marginRight="@dimen/row_space">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:gravity="center"
                        android:text="@string/user_information"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow android:layout_marginTop="@dimen/row_space"
                    android:layout_marginLeft="@dimen/row_space"
                    android:layout_marginRight="@dimen/row_space">

                    <TextView
                        android:layout_height="wrap_content"
                        android:text="@string/user"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/user"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColor="#000" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/row_space"
                    android:layout_marginLeft="@dimen/row_space"
                    android:layout_marginRight="@dimen/row_space">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/password"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:background="#fff"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColor="#000" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/row_space"
                    android:layout_marginLeft="@dimen/row_space"
                    android:layout_marginRight="@dimen/row_space">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/confirmation"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/confirmation"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:background="#fff"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColor="#000" />
                </TableRow>

            </TableLayout>

            <ImageButton
                android:id="@+id/btn"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_send_black_24dp" />
        </LinearLayout>

    </ScrollView>

</GridLayout>