<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:stretchColumns="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow android:layout_marginTop="@dimen/row_space"
                    android:layout_marginLeft="@dimen/row_space"
                    android:layout_marginRight="@dimen/row_space">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        app:srcCompat="@drawable/ic_account_circle_black_24dp" />


                </TableRow>

                <TableRow android:layout_marginTop="@dimen/row_space"
                    android:layout_marginLeft="@dimen/row_space"
                    android:layout_marginRight="@dimen/row_space">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:gravity="center"
                        android:text="@string/personal_information_password"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </TableRow>
                <TableRow android:layout_marginTop="@dimen/row_space"
                    android:layout_marginLeft="@dimen/row_space"
                    android:layout_marginRight="@dimen/row_space">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/user"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/user"
                        android:layout_width="267dp"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:gravity="fill"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColor="#000" />

                </TableRow>
                <TableRow android:layout_marginTop="@dimen/row_space"
                    android:layout_marginLeft="@dimen/row_space"
                    android:layout_marginRight="@dimen/row_space">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/password"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:textColor="#000" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/row_space"
                    android:layout_marginLeft="@dimen/row_space"
                    android:layout_marginRight="@dimen/row_space">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/new_password"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:textColor="#000" />
                </TableRow>


                <TableRow android:layout_marginTop="@dimen/row_space"
                    android:layout_marginLeft="@dimen/row_space"
                    android:layout_marginRight="@dimen/row_space">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/confirm_password"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:textColor="#000" />
                </TableRow>

            </TableLayout>

            <ImageButton
                android:id="@+id/btn"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_send_black_24dp" />
        </LinearLayout>

    </ScrollView>

</GridLayout>